# chat-a-doc

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  Temp_Github_Output  build-test.sh  docker_entrypoint.sh  pyproject.toml  pytest.ini
.github/workflows/: README.md  build_and_publish.yml  ci.yml
docs/adr/: adr-000-principles-framework-adoption.md  adr-002-library-selection.md
src/chat_a_doc/: __init__.py  __main__.py  http_server.py  server.py
src/chat_a_doc/generators/: __init__.py  generate_csv.py  generate_docx.py  generate_html.py  generate_markdown.py  generate_pdf.py  generate_txt.py
src/chat_a_doc/security/: __init__.py  path_validator.py
src/chat_a_doc/templates/: __init__.py  template_manager.py
src/chat_a_doc/utils/: __init__.py  file_link_generator.py  filename_generator.py
starter_templates/: academic.css  corporate.css  modern.css
tests/: README.md  __init__.py  conftest.py  test_docker_integration.py  test_generators.py  test_helpers.py  test_integration.py  test_security.py  test_templates.py
tests/test_data/: complex.md  edge_cases.md  simple.md  tables.md
tests/test_data/baselines/csv/: test_document_title_00.csv
tests/test_data/baselines/html/: complex_test_document_00.html  test_document_title_00.html
tests/test_data/baselines/txt/: complex_test_document_00.txt
tests/test_formats/: __init__.py  test_csv.py  test_docx.py  test_html.py  test_markdown.py  test_pdf.py  test_txt.py
